--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,29 @@
+* {
+  font-family: "Roboto", sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 .row{
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(4, 3fr);
+
+}
+.img{
+  width: 60%;
+  height: 60%;
+}
+.h-cont{
+  background-color: blanchedalmond;
+  width: 100%;
+  height: 50px;
+  position: fixed;
+}
+.h-text{
+  padding-top: 8px;
+  padding-left: 8px;
+}
+.container{
+  padding-top: 80px;
+  
 }
